--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -67,6 +67,8 @@ jobs:
       run:
         shell: bash
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Checkout code
         uses: actions/checkout@v3
         with:
@@ -85,12 +87,13 @@ jobs:
       - name: Download image
         run: |
           mkdir -p output
-          wget -O ncp.tar.gz https://github.com/nextcloud/nextcloudpi/releases/download/v1.48.3/NextCloudPi_RPi_07-25-22.tar.gz
+          wget -O ncp.tar.gz ßnv https://github.com/nextcloud/nextcloudpi/releases/download/v1.48.3/NextCloudPi_RPi_07-25-22.tar.gz
           tar xf "ncp.tar.gz"
           mv NextCloudPi_*.img ncp.img
       - name: Prepare test
         run: |
           set -ex
+          wget -nv https://github.com/multiarch/qemu-user-static/releases/latest/download/qemu-aarch64-static -O ./qemu-aarch64-static
           sudo apt-get install -y systemd-container
           sudo pip install selenium
           sudo rm -rf raspbian_root
@@ -222,9 +225,12 @@ jobs:
           . ./build/buildlib.sh
           pack_image "tmp/$IMG" "output/$TAR"
           echo "::set-output name=artifact_name::${TAR}"
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Prepare test
         run: |
           set -ex
+          wget -nv https://github.com/multiarch/qemu-user-static/releases/latest/download/qemu-aarch64-static -O ./qemu-aarch64-static
           sudo apt-get install -y systemd-container
           sudo pip install selenium
           sudo rm -rf raspbian_root
