build-sd-images.yml: Fix syntax error

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           set -ex
           mkdir -p output
-          wget -O ncp.tar.gz ßnv https://github.com/nextcloud/nextcloudpi/releases/download/v1.48.3/NextCloudPi_RPi_07-25-22.tar.gz
+          wget -O ncp.tar.gz -nv https://github.com/nextcloud/nextcloudpi/releases/download/v1.48.3/NextCloudPi_RPi_07-25-22.tar.gz
           tar xf "ncp.tar.gz"
           mv NextCloudPi_*.img ncp.img
       - name: Prepare test
