--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -58,7 +58,7 @@ jobs:
           if-no-files-found: error
 
   test-rpi:
-    #needs: build-rpi
+    needs: build-rpi
     runs-on: ubuntu-latest
     env:
       UID: "${{ github.run_id }}-rpi"
@@ -74,23 +74,14 @@ jobs:
         with:
           ref: "${{ env.VERSION }}"
       - uses: actions/download-artifact@v3
-        if: false
         with:
           name: ${{ github.run_id }}-rpi-image
           path: output/${{ needs.build-rpi.outputs.artifact_name }}
       - name: Extract image
-        if: false
         run: |
           set -ex
           tar xf "output/${{ needs.build-rpi.outputs.artifact_name }}"
           mv "$( basename "${{ needs.build-rpi.outputs.artifact_name }}" .tar.gz ).img" ncp.img
-      - name: Download image
-        run: |
-          set -ex
-          mkdir -p output
-          wget -O ncp.tar.gz -nv https://github.com/nextcloud/nextcloudpi/releases/download/v1.48.3/NextCloudPi_RPi_07-25-22.tar.gz
-          tar xf "ncp.tar.gz"
-          mv NextCloudPi_*.img ncp.img
       - name: Prepare test
         run: |
           set -ex
@@ -112,8 +103,8 @@ jobs:
           for attempt in {1..30}
           do
             echo ":: Wait for container to startup (attempt $attempt/30) ::"
-            ip="$(cat container.log | grep 'My IP address is' | cut -d ' ' -f5 || true)"
-            curl -k "https://$ip/activate" > /dev/null || { sleep 6; continue; }
+            ip="$(sudo systemd-run --machine=ncp -P --wait bash -c '. /usr/local/etc/library.sh; get_ip')"
+            [[ -n "$ip" ]] && curl -k "https://$ip/activate" > /dev/null || { sleep 6; continue; }
             success=true
             break
           done
@@ -193,13 +184,20 @@ jobs:
     strategy:
       matrix:
         board:
-          - odroidxu4 OdroidHC2
-          - rockpro64 RockPro64
-          - rock64 Rock64
-          - bananapi Bananapi
-          - odroidhc4 OdroidHC4
-          - odroidc4 OdroidC4
-          - odroidc2 OdroidC2
+          - id: odroidxu4
+            name: OdroidHC2
+          - id: rockpro64
+            name: RockPro64
+          - id: rock64
+            name: Rock64
+          - id: bananapi
+            name: Bananapi
+          - id: odroidhc4
+            name: OdroidHC4
+          - id: odroidc4
+            name: OdroidC4
+          - id: odroidc2
+            name: OdroidC2
       fail-fast: false
     steps:
       - name: Checkout code
@@ -212,8 +210,8 @@ jobs:
           set -x
           export LIB_TAG=master
           board_params=(${{ matrix.board}})
-          IMG="NextCloudPi_${board_params[1]}_$( date  "+%m-%d-%y" ).img"
-          ./build/build-SD-armbian.sh "${board_params[@]}"
+          IMG="NextCloudPi_${{ matrix.board.name }}_$( date  "+%m-%d-%y" ).img"
+          ./build/build-SD-armbian.sh "${{ matrix.board.id }}" "${{ matrix.board.name }}"
           echo "::set-output name=image::${IMG}"
       - name: "Pack image"
         id: pack-armbian
@@ -225,9 +223,37 @@ jobs:
           mv "${artifacts[0]}" "tmp/$IMG"
           . ./build/buildlib.sh
           pack_image "tmp/$IMG" "output/$TAR"
-          echo "::set-output name=artifact_name::${TAR}"
+          echo "::set-output name=${{ matrix.board.id }}_artifact_name::${TAR}"
+      - name: upload Armbian image to artifact store
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.run_id }}-${{ matrix.board.id }}-image
+          path: output/${{ steps.build-pack-armbian.outputs.artifact_name }}
+          if-no-files-found: error
+
+  test-armbian:
+    needs: build-armbian
+    runs-on: ubuntu-latest
+    env:
+      VERSION: "${{ inputs.git_ref }}"
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      matrix:
+        board_id: ${{ needs.build-armbian.matrix.board.*.id }}
+    steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+      - uses: actions/download-artifact@v3
+        with:
+          name: ${{ github.run_id }}-${{ matrix.board_id }}-image
+          path: output/armbian.tar.gz
+      - name: Extract image
+        run: |
+          set -ex
+          tar xf "output/armbian.tar.gz"
+          mv "*.img" ncp.img
       - name: Prepare test
         run: |
           set -ex
@@ -249,8 +275,8 @@ jobs:
           for attempt in {1..30}
           do
             echo ":: Wait for container to startup (attempt $attempt/30) ::"
-            ip="$(cat container.log | grep 'My IP address is' | cut -d ' ' -f5 || true)"
-            curl -k "https://$ip/activate" > /dev/null || { sleep 6; continue; }
+            ip="$(sudo systemd-run --machine=ncp -P --wait bash -c '. /usr/local/etc/library.sh; get_ip')"
+            [[ -n "$ip" ]] && curl -k "https://$ip/activate" > /dev/null || { sleep 6; continue; }
             success=true
             break
           done
@@ -316,9 +342,3 @@ jobs:
           result=$?
           sudo machinectl terminate ncp || true
           exit "$result"
-      - name: upload Armbian image to artifact store
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ github.run_id }}-armbian-image
-          path: output/${{ steps.build-pack-armbian.outputs.artifact_name }}
-          if-no-files-found: error
