build-sd-images.yml: Add debug output

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -121,6 +121,7 @@ jobs:
             echo ":: Activation Tests (attempt $attempt/3) ::"
             python tests/activation_tests.py --no-gui "$ip" 443 4443 || {
               echo "Activation test failed!"
+              curl -kv https://"$ip":4443
               echo "Geckodriver logs:"
               tail -n 20 geckodriver.log >&2 || true
               echo "================"
