--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -47,8 +47,9 @@ jobs:
           IMG="${{ steps.build-rpi.outputs.image }}"
           TAR="$( basename "$IMG" .img ).tar.gz"
           . ./build/buildlib.sh
-          pack_image "tmp/$IMG" "output/$TAR"
-          echo "::set-output name=artifact_name::${TAR}"
+          #pack_image "tmp/$IMG" "output/$TAR"
+          mv "tmp/$IMG" "output/$IMG"
+          echo "::set-output name=artifact_name::${IMG}"
 
       - name: upload RPI image to artifact store
         uses: actions/upload-artifact@v3
@@ -80,7 +81,7 @@ jobs:
       - name: Extract image
         run: |
           set -ex
-          tar xf "output/${{ needs.build-rpi.outputs.artifact_name }}"
+          #tar xf "output/${{ needs.build-rpi.outputs.artifact_name }}"
           mv "$( basename "${{ needs.build-rpi.outputs.artifact_name }}" .tar.gz ).img" ncp.img
       - name: Prepare test
         run: |
