build-sd-images.yml: Fix missing debug output

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -127,7 +127,7 @@ jobs:
               tail -n 20 geckodriver.log >&2 || true
               echo "================"
               echo "ncp.log: "
-              sudo systemd-run --wait --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
+              sudo systemd-run --wait -P --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
               sleep 6
               continue
             }
@@ -160,7 +160,7 @@ jobs:
               tail -n 20 geckodriver.log >&2 || true
               echo "================"
               echo "ncp.log: "
-              sudo systemd-run --wait --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
+              sudo systemd-run --wait -P --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
               sleep 6
               continue
             }
@@ -311,7 +311,7 @@ jobs:
               tail -n 20 geckodriver.log >&2 || true
               echo "================"
               echo "ncp.log: "
-              sudo systemd-run --wait --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
+              sudo systemd-run --wait -P --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
               sleep 6
               continue
             }
@@ -344,7 +344,7 @@ jobs:
               tail -n 20 geckodriver.log >&2 || true
               echo "================"
               echo "ncp.log: "
-              sudo systemd-run --wait --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
+              sudo systemd-run --wait -P --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
               sleep 6
               continue
             }
