--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -28,6 +28,11 @@ jobs:
     env:
       VERSION: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
     steps:
+      - name: debugging
+        run: |
+          mount
+          docker run --rm arm32v7/debian:bullseye-slim bash -c 'apt-get update && apt-get install -y apache2 && apache2ctl -V' || true
+          apt-get update && apt-get -y upgrade
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
