--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           mount
           docker run --rm arm32v7/debian:bullseye-slim bash -c 'apt-get update && apt-get install -y apache2 && apache2ctl -V' || true
-          apt-get update && apt-get -y upgrade
+          sudo apt-get update && sudo apt-get -y upgrade
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
