--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,7 @@ jobs:
     secrets: inherit
 
   odroidxu4:
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
     uses: ./.github/workflows/build-armbian.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -70,6 +71,7 @@ jobs:
       require_test: false
     secrets: inherit
   rockpro64:
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
     uses: ./.github/workflows/build-armbian.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -78,6 +80,7 @@ jobs:
       require_test: false
     secrets: inherit
   rock64:
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
     uses: ./.github/workflows/build-armbian.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -86,6 +89,7 @@ jobs:
       require_test: false
     secrets: inherit
   bananapi:
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
     uses: ./.github/workflows/build-armbian.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -94,6 +98,7 @@ jobs:
       require_test: false
     secrets: inherit
   odroidhc4:
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
     uses: ./.github/workflows/build-armbian.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -102,6 +107,7 @@ jobs:
       require_test: false
     secrets: inherit
   odroidc4:
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
     uses: ./.github/workflows/build-armbian.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -110,6 +116,7 @@ jobs:
       require_test: false
     secrets: inherit
   odroidc2:
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
     uses: ./.github/workflows/build-armbian.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -164,7 +171,7 @@ jobs:
   github-release:
     needs:
       - build-and-test-lxd
-      - build-sd-images
+      - build-rpi
       - test-curl-installer
       - odroidxu4
       - rockpro64
