--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
     secrets: inherit
 
-  rpi:
+  raspberrypi:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
     uses: ./.github/workflows/build-sd-images.yml
     with:
@@ -171,7 +171,7 @@ jobs:
   github-release:
     needs:
       - build-and-test-lxd
-      - build-rpi
+      - raspberrypi
       - test-curl-installer
       - odroidxu4
       - rockpro64
