--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,14 +33,14 @@ permissions:
   contents: write
 
 jobs:
-  build-and-test-lxd:
+  lxd:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.lxd }}"
     uses: ./.github/workflows/build-lxd.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
     secrets: inherit
 
-  build-and-test-docker:
+  docker:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.docker }}"
     uses: ./.github/workflows/build-docker.yml
     with:
@@ -59,75 +59,173 @@ jobs:
     uses: ./.github/workflows/build-sd-images.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      board_id: raspberrypi
+      board_name: RaspberryPi
     secrets: inherit
 
   odroidxu4:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
-    uses: ./.github/workflows/build-armbian.yml
+    uses: ./.github/workflows/build-sd-images.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       board_id: odroidxu4
       board_name: OdroidHC2
-      require_test: false
     secrets: inherit
   rockpro64:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
-    uses: ./.github/workflows/build-armbian.yml
+    uses: ./.github/workflows/build-sd-images.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       board_id: rockpro64
       board_name: RockPro64
-      require_test: false
     secrets: inherit
   rock64:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
-    uses: ./.github/workflows/build-armbian.yml
+    uses: ./.github/workflows/build-sd-images.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       board_id: rock64
       board_name: Rock64
-      require_test: false
     secrets: inherit
   bananapi:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
-    uses: ./.github/workflows/build-armbian.yml
+    uses: ./.github/workflows/build-sd-images.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       board_id: bananapi
-      board_name: Bananapi
-      require_test: false
+      board_name: BananaPi
     secrets: inherit
   odroidhc4:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
-    uses: ./.github/workflows/build-armbian.yml
+    uses: ./.github/workflows/build-sd-images.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       board_id: odroidhc4
       board_name: OdroidHC4
-      require_test: false
     secrets: inherit
   odroidc4:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
-    uses: ./.github/workflows/build-armbian.yml
+    uses: ./.github/workflows/build-sd-images.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       board_id: odroidc4
       board_name: OdroidC4
-      require_test: false
     secrets: inherit
   odroidc2:
     if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
-    uses: ./.github/workflows/build-armbian.yml
+    uses: ./.github/workflows/build-sd-images.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       board_id: odroidc2
       board_name: OdroidC2
-      require_test: false
+    secrets: inherit
+
+
+  lxd-release:
+    needs:
+      - github-release
+      - lxd
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.lxd }}"
+    uses: ./.github/workflows/publish-image.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.lxd.outputs.artifact_name }}"
+      artifact_file: "${{ needs.lxd.outputs.artifact_file }}"
+    secrets: inherit
+
+  raspberrypi-release:
+    needs:
+      - raspberrypi
+      - github-release
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
+    uses: ./.github/workflows/build-sd-images.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.raspberrypi.outputs.artifact_name }}"
+      artifact_file: "${{ needs.raspberrypi.outputs.artifact_file }}"
+    secrets: inherit
+
+  odroidxu4-release:
+    needs:
+      - odroidxu4
+      - github-release
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
+    uses: ./.github/workflows/build-sd-images.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.odroidxu4.outputs.artifact_name }}"
+      artifact_file: "${{ needs.odroidxu4.outputs.artifact_file }}"
+    secrets: inherit
+  rockpro64-release:
+    needs:
+      - rockpro64
+      - github-release
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
+    uses: ./.github/workflows/build-sd-images.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.rockpro64.outputs.artifact_name }}"
+      artifact_file: "${{ needs.rockpro64.outputs.artifact_file }}"
+    secrets: inherit
+  rock64-release:
+    needs:
+      - rock64
+      - github-release
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
+    uses: ./.github/workflows/build-sd-images.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.rock64.outputs.artifact_name }}"
+      artifact_file: "${{ needs.rock64.outputs.artifact_file }}"
+    secrets: inherit
+  bananapi-release:
+    needs:
+      - bananapi
+      - github-release
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
+    uses: ./.github/workflows/build-sd-images.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.bananapi.outputs.artifact_name }}"
+      artifact_file: "${{ needs.bananapi.outputs.artifact_file }}"
+    secrets: inherit
+  odroidhc4-release:
+    needs:
+      - odroidhc4
+      - github-release
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
+    uses: ./.github/workflows/build-sd-images.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.odroidhc4.outputs.artifact_name }}"
+      artifact_file: "${{ needs.odroidhc4.outputs.artifact_file }}"
+    secrets: inherit
+  odroidc4-release:
+    needs:
+      - odroidc4
+      - github-release
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
+    uses: ./.github/workflows/build-sd-images.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.odroidc4.outputs.artifact_name }}"
+      artifact_file: "${{ needs.odroidc4.outputs.artifact_file }}"
+    secrets: inherit
+  odroidc2-release:
+    needs:
+      - odroidc2
+      - github-release
+    if: "${{ github.event_name != 'workflow_dispatch' || inputs.sd-images }}"
+    uses: ./.github/workflows/build-sd-images.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.odroidc2.outputs.artifact_name }}"
+      artifact_file: "${{ needs.odroidc2.outputs.artifact_file }}"
     secrets: inherit
 
   docker-release:
     needs:
-      - build-and-test-docker
+      - docker
       - test-curl-installer
     if: ${{ github.event_name == 'push' && github.ref_type == 'tag' && github.ref_protected }}
     runs-on: ubuntu-latest
@@ -170,16 +268,7 @@ jobs:
 
   github-release:
     needs:
-      - build-and-test-lxd
-      - raspberrypi
       - test-curl-installer
-      - odroidxu4
-      - rockpro64
-      - rock64
-      - bananapi
-      - odroidhc4
-      - odroidc4
-      - odroidc2
     runs-on: ubuntu-latest
     env:
       UID: "${{ github.run_id }}-rpi"
@@ -194,37 +283,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
-      - name: download images from artifact store
-        uses: actions/download-artifact@v3
-        with:
-          path: artifacts
-      - name: Prepare Release
-        id: prepare-release
-        run: |
-          mkdir -p release
-          cd release
-          checksums=()
-          assets=()
-          echo "Checksums:"
-          for asset in ../artifacts/*/*{.tar.gz,.img};
-          do
-            mv "$asset" ./
-            if [[ "$asset" =~ .*.img$ ]]
-            then
-              zip "$( basename "$asset" .img ).zip" "$asset"
-              asset_name="$( basename "$asset" .img ).zip"
-            else
-              asset_name="$(basename "$asset")"
-            fi
-            checksum="$(md5sum "$asset_name")"
-            echo "  $checksum"
-            checksums+=("$checksum")
-            assets+=(-a "$asset_name")
-          done
-
-          echo "::set-output name=assets::$(printf " %q" "${assets[@]}")"
-          echo "::set-output name=checksums::$(printf " %q" "${checksums[@]}")"
-      - name: Publish
+      - name: Create Draft
         if: ${{ github.event_name == 'push' && github.ref_type == 'tag' && github.ref_protected }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -247,13 +306,10 @@ jobs:
           ```"
           done
 
-          hub release create ${{ steps.prepare-release.outputs.assets }} -F - "${{ env.VERSION }}" <<EOF
+          hub release create --draft -F - "${{ env.VERSION }}" <<EOF
           ${subject:-No message found}
 
           ${body:+${body}${separator}}[Docker images](https://hub.docker.com/r/ownyourbits/nextcloudpi)
 
           [Changelog](https://github.com/nextcloud/nextcloudpi/blob/${{ env.VERSION }}/changelog.md)
-
-          **Checksums:**
-          ${checksums_str}
           EOF
